--- a/item-eyez/App.xaml
+++ b/item-eyez/App.xaml
@@ -1,9 +1,199 @@
-﻿<Application x:Class="item_eyez.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:item_eyez"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="item_eyez.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:item_eyez"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="WatermarkTextBox" TargetType="TextBox">
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Width" Value="200" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <GroupBox FontSize="20" Header="{TemplateBinding Tag}">
+                            <Border
+                                x:Name="border"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="Gray"
+                                BorderThickness="1">
+                                <TextBox x:Name="innerTextBox" Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Border>
+                        </GroupBox>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter TargetName="innerTextBox" Property="BorderBrush" Value="Blue" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="GroupBox">
+            <Setter Property="FontSize" Value="30" />
+            <Setter Property="BorderBrush" Value="Cyan" />
+            <Setter Property="BorderThickness" Value="3" />
+            <Setter Property="Background" Value="#db4437" />
+            <Setter Property="Template" Value="{DynamicResource GroupBoxTemplate1}" />
+        </Style>
+
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="18" />
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="BorderBrush" Value="Pink" />
+            <Setter Property="BorderThickness" Value="6" />
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Background" Value="MediumAquamarine" />
+        </Style>
+
+        <Style TargetType="DataGrid">
+            <Setter Property="FontSize" Value="16" />
+        </Style>
+
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+        </Style>
+
+        <BorderGapMaskConverter x:Key="BorderGapMaskConverter" />
+
+        <ControlTemplate x:Key="GroupBoxTemplate1" TargetType="{x:Type GroupBox}">
+            <Grid SnapsToDevicePixels="true">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="6" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="6" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="6" />
+                </Grid.RowDefinitions>
+                <Border
+                    Grid.Row="1"
+                    Grid.RowSpan="3"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="4"
+                    Background="{TemplateBinding Background}"
+                    BorderBrush="Transparent"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="4" />
+                <Border
+                    Grid.Row="1"
+                    Grid.RowSpan="3"
+                    Grid.ColumnSpan="4"
+                    BorderBrush="Black"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="4">
+                    <Border.OpacityMask>
+                        <MultiBinding Converter="{StaticResource BorderGapMaskConverter}" ConverterParameter="7">
+                            <Binding ElementName="Header" Path="ActualWidth" />
+                            <Binding Path="ActualWidth" RelativeSource="{RelativeSource Mode=Self}" />
+                            <Binding Path="ActualHeight" RelativeSource="{RelativeSource Mode=Self}" />
+                        </MultiBinding>
+                    </Border.OpacityMask>
+                    <Border
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="3">
+                        <Border
+                            BorderBrush="Black"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="2" />
+                    </Border>
+                </Border>
+                <Border
+                    x:Name="Header"
+                    Grid.Row="0"
+                    Grid.RowSpan="2"
+                    Grid.Column="1"
+                    Padding="3,1,3,0"
+                    Background="Coral"
+                    BorderBrush="blue"
+                    BorderThickness="2"
+                    CornerRadius="2">
+                    <ContentPresenter
+                        ContentSource="Header"
+                        RecognizesAccessKey="True"
+                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                </Border>
+                <ContentPresenter
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Margin="{TemplateBinding Padding}"
+                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+            </Grid>
+        </ControlTemplate>
+
+        <Style TargetType="DataGridColumnHeader">
+            <Setter Property="Background" Value="LightGreen" />
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="DataGridColumnHeader">
+                        <Grid Background="{TemplateBinding Background}">
+                            <Border
+                                BorderBrush="Blue"
+                                BorderThickness="4"
+                                CornerRadius="2">
+                                <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="CustomAddButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border
+                            x:Name="border"
+                            Background="Coral"
+                            BorderBrush="Purple"
+                            BorderThickness="10"
+                            CornerRadius="4">
+                            <Label
+                                Margin="5"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Content="{TemplateBinding Content}"
+                                FontSize="17"
+                                FontWeight="Bold" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <!--  MouseOver Effect  -->
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="DarkSalmon" />
+                                <Setter TargetName="border" Property="BorderBrush" Value="OrangeRed" />
+                            </Trigger>
+
+                            <!--  MouseDown Effect  -->
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="Firebrick" />
+                                <Setter TargetName="border" Property="BorderBrush" Value="Red" />
+                            </Trigger>
+
+                            <Trigger Property="IsKeyboardFocused" Value="True">
+                                <Setter TargetName="border" Property="Background" Value="DarkSalmon" />
+                                <Setter TargetName="border" Property="BorderBrush" Value="OrangeRed" />
+                            </Trigger>
+                            
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
