--- a/item-eyez/MainWindow.xaml
+++ b/item-eyez/MainWindow.xaml
@@ -7,7 +7,15 @@
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight"
         Title="MainWindow" Height="550" Width="900">
-    <Grid>
+    <Window.DataContext>
+        <local:MainViewModel />
+    </Window.DataContext>
+    <StackPanel>
+        <Menu>
+            <MenuItem Header="File">
+                <MenuItem Header="Reset Database" Command="{Binding ResetDatabaseCommand}" />
+            </MenuItem>
+        </Menu>
         <local:main_view />
-    </Grid>
+    </StackPanel>
 </Window>
