--- a/item-eyez/items-view.xaml
+++ b/item-eyez/items-view.xaml
@@ -23,7 +23,6 @@
                 Background="Pink"
                 CanUserDeleteRows="True"
                 CanUserResizeColumns="True"
-                CellEditEnding="datagrid_CellEditEnding"
                 ItemsSource="{Binding Items}"
                 SelectedItem="{Binding SelectedItem}">
                 <DataGrid.Columns>
@@ -117,7 +116,10 @@
                 SelectedItem="{Binding SelectedRoom}" />
         </GroupBox>
         <GroupBox Margin="0,103,968,356" Header="name">
-            <TextBox Text="{Binding Name, UpdateSourceTrigger=LostFocus}" />
+            <TextBox
+                local:EnterKeyBehavior.Command="{Binding AddItemCommand}"
+                local:FocusBehavior.IsFocused="{Binding NameFocused, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
         </GroupBox>
         <GroupBox Margin="237,103,651,280" Header="description">
             <TextBox Text="{Binding Description, UpdateSourceTrigger=LostFocus}" TextWrapping="Wrap" />
