--- a/item-eyez/views/rooms-view.xaml
+++ b/item-eyez/views/rooms-view.xaml
@@ -18,6 +18,7 @@
             <DataGrid
                 Background="Pink"
                 Name="datagrid"
+                RowBackground="SkyBlue"
                 AlternatingRowBackground="LightBlue"
                 AlternationCount="1"
                 AutoGenerateColumns="False"
