--- a/item-eyez/views/items-view.xaml
+++ b/item-eyez/views/items-view.xaml
@@ -17,6 +17,7 @@
         <Border Margin="0,276,10,-89">
             <DataGrid
                 Name="datagrid"
+                RowBackground="SkyBlue"
                 AlternatingRowBackground="LightBlue"
                 AlternationCount="1"
                 AutoGenerateColumns="False"
