--- a/item-eyez/App.xaml
+++ b/item-eyez/App.xaml
@@ -31,25 +31,72 @@
             </Setter>
         </Style>
 
+        <LinearGradientBrush x:Key="GroupBox.Static.Background" StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Offset="0.0" Color="Red" />
+            <GradientStop Offset="1.0" Color="Orange" />
+        </LinearGradientBrush>
+        
         <Style TargetType="GroupBox">
             <Setter Property="FontSize" Value="30" />
             <Setter Property="BorderBrush" Value="Cyan" />
             <Setter Property="BorderThickness" Value="3" />
-            <Setter Property="Background" Value="#db4437" />
+            <Setter Property="Background" Value="{StaticResource GroupBox.Static.Background}" />
             <Setter Property="Template" Value="{DynamicResource GroupBoxTemplate1}" />
         </Style>
+
+        <LinearGradientBrush x:Key="TextBox.Static.Background" StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Offset="0.0" Color="MediumAquamarine" />
+            <GradientStop Offset="1.0" Color="Cyan" />
+        </LinearGradientBrush>
 
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="18" />
         </Style>
-
-        <Style TargetType="TextBox">
-            <Setter Property="BorderBrush" Value="Pink" />
-            <Setter Property="BorderThickness" Value="6" />
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="Background" Value="MediumAquamarine" />
+        <SolidColorBrush x:Key="TextBox.Static.Border" Color="#FFABAdB3"/>
+        <SolidColorBrush x:Key="TextBox.MouseOver.Border" Color="#FF7EB4EA"/>
+        <SolidColorBrush x:Key="TextBox.Focus.Border" Color="#FF569DE5"/>
+        <Style  TargetType="{x:Type TextBox}">
+            <Setter Property="Background" Value="{StaticResource  TextBox.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource TextBox.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="AllowDrop" Value="true"/>
+            <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True">
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" TargetName="border" Value="0.56"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.MouseOver.Border}"/>
+                            </Trigger>
+                            <Trigger Property="IsKeyboardFocused" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource TextBox.Focus.Border}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+                        <Condition Property="IsSelectionActive" Value="false"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+                </MultiTrigger>
+            </Style.Triggers>
         </Style>
-
+        
         <Style TargetType="DataGrid">
             <Setter Property="FontSize" Value="16" />
         </Style>
@@ -115,7 +162,7 @@
                     Grid.RowSpan="2"
                     Grid.Column="1"
                     Padding="3,1,3,0"
-                    Background="Coral"
+                    Background="{StaticResource GroupBox.Static.Background}"
                     BorderBrush="blue"
                     BorderThickness="2"
                     CornerRadius="2">
@@ -236,7 +283,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <SolidColorBrush x:Key="TextBox.Static.Background" Color="Cyan" />
         <Style x:Key="ComboBoxEditableTextBox" TargetType="{x:Type TextBox}">
             <Setter Property="OverridesDefaultStyle" Value="true" />
             <Setter Property="AllowDrop" Value="true" />
