--- a/item-eyez/views/containers-view.xaml
+++ b/item-eyez/views/containers-view.xaml
@@ -10,6 +10,9 @@
     HorizontalAlignment="Left"
     VerticalAlignment="Top"
     mc:Ignorable="d">
+    <UserControl.Resources>
+       
+    </UserControl.Resources>
     <UserControl.DataContext>
         <local:ContainersViewModel />
     </UserControl.DataContext>
